# nounours

./: .autotools  .cproject  .gitignore  .project  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  deployscreensaver.sh  nounours-college.desktop  nounours.desktop
config/: .gitignore  config.h.in
data/: Makefile.am  Makefile.in  deployscreensaverconfig.sh.in  nounours-rainbow.desktop  nounours-robot.desktop  nounours-xscreensaver.desktop.in  nounours.desktop  nounours.xml  nounours.xscreensaver
data/icons/: Makefile.am  Makefile.in
data/themes/1/: nounours.properties
data/themes/college/: image.csv  nounours.properties
data/themes/college/images/: nounours.xpm
data/themes/default/: animation.csv
data/themes/default/images/: nounours.xpm
data/themes/rainbow/: animation.csv  theme.properties
data/themes/robot/: adjacentimage.csv  animation.csv  image.csv  nounours.properties  theme.properties
data/themes/robot/images/: nounours.xpm
debian/: Release  changelog  control  copyright  override  postinst  postrm
doc/: nounours.6
src/: main.c
src/common/include/: nncommon.h  nnmath.h  nnnounours.h  nnnounoursapp.h
src/common/src/: nncommon.c  nnmath.c  nnnounours.c  nnnounoursapp.c
src/data/include/: nfeature.h  nimage.h  nnanimation.h  nndatacommon.h  nnfeature.h  nnimage.h  nntheme.h
src/data/src/: nfeature.c  nimage.c  nnanimation.c  nndatacommon.c  nnfeature.c  nnimage.c  nntheme.c
src/io/include/: nncsvreader.h  nnio.h  nnpropertiesreader.h
src/io/src/: nncsvreader.c  nnio.c  nnpropertiesreader.c
src/ui/include/: nnclientmessage.h  nnuiimage.h  nnuinounours.h  nnuinounoursapp.h  nnwindow.h
src/ui/src/: nnclientmessage.c  nnuiimage.c  nnuinounours.c  nnuinounoursapp.c  nnwindow.c
tools/: build.sh  build_dist.sh  build_repo.sh  clean.sh
